fixed missing div, which caused background color bar to spill over

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,4 +1,4 @@
-#section-header {
+#color-bar {
   background-color: #ffffff;
 }
 
